mxslc/tests/data/error/bad_func_call_2.mxsl
float x = 0.0;
float y = 1.0;

void foo()
{
    float x = 3.0;
}

foo();

color3 c = color3(x, y, 2.0);
